--- a/Style/styles.css
+++ b/Style/styles.css
@@ -7,20 +7,20 @@ body {
     margin: 0;
     padding: 0;
     min-height: 100%;
+    font-family: 'Dancing Script', cursive;
 }
 
 .mynav {
-    background-color: #B4D2E7;
+    background-color: #f3c0fd;
     height: 15vh;
     color: #A1A6B4;
 }
 
 .product-price {
-    color: #94C5CC;
+    color: #f794ee;
 }
 
 .product-image {
-   
     object-fit: cover;
     min-height: 40vh;
     width: 100%;
@@ -38,23 +38,19 @@ body {
 }
 
 .product-button:hover {
-    background-color: #5aa3d8;
+    background-color: #f794ee;
     color: #eff1f5;
     ;
-
 }
 
 .cart-row {
-    
-    border-bottom: 1px solid #B4D2E7;
-    color:#5aa3d8;
-   
+    border-bottom: 1px solid #f794ee;
+    color: #f794ee;
 }
 
-.cart-header{
-    color: #3392d6;
+.cart-header {
+    color: #f794ee;
 }
-
 
 .cart-item-image {
     width: 75px;
@@ -71,28 +67,27 @@ body {
 .cart-total-title {
     font-weight: bold;
     font-size: 1.5em;
-    color: #5aa3d8;
+    color: #f794ee;
     margin-right: 20px;
 }
 
-.plus, .minus{
+.plus,
+.minus {
     color: #5aa3d8;
-    font-size:2.5em;
+    font-size: 2.5em;
 }
 
 .btn-purchase {
-
     font-size: 1.5em;
     background-color: #B4D2E7;
 }
 
 .btn-purchase:hover {
-
     background-color: #5085aa;
 }
 
 @media only screen and (max-width: 995px) {
     .mynav {
-      height: 20vh;
+        height: 20vh;
     }
-  } 
+}
